--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -51,14 +51,14 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
             <div class="col s4 m3" style="padding:0px;">
               <div class="collection hostel-collection">
               <a href="#!" class="collection-item" style = "font-size:24px; text-align:center">{{ all_hostels.name }}</a>
-              <a href="https://drive.google.com/file/d/1BBI1LlDa7MDdUBNVwIg-SktusiMB8kix/view?usp=sharing" class="collection-item drop-down" style = "text-align:left">Hostel Constitution</a>
-              <a href="https://drive.google.com/file/d/1lK0xM5z-TvJhbEK9exjc-Qb--XUnSjPD/view?usp=sharing" class="collection-item" style = "text-align:left">Students' Gymkhana Constitution</a>
-              <a href="https://drive.google.com/file/d/1mL03zdBFMtQwzES4tRRhdXG1lZVI_UFi/view?usp=sharing" class="collection-item" style = "text-align:left">Hostel Maintainance Policy</a>
-              <a href="https://drive.google.com/file/d/11v7vp54PRmDYR708BYvJcagKk_QzIRNH/view?usp=sharing" class="collection-item" style = "text-align:left">Mess Guidelines</a>
-              <a href="https://drive.google.com/file/d/1Ke_jv7gK1GWj7tDdvdtEFfPXzNyh2r0i/view?usp=sharing" class="collection-item" style = "text-align:left">Duties of HEC members</a>
-              <a href="#!" class="collection-item" style = "text-align:left">Canteen</a>
-              <a href="https://drive.google.com/file/d/1kP4wlHLg2cthGeteKpBu-d0Wlgwhuxnd/view?usp=sharing" class="collection-item" style = "text-align:left">Committee Conveners of Parliament</a>
-              <a href="#!" class="collection-item" style = "text-align:left">Laundry Service</a>
+              <a href="https://drive.google.com/file/d/1BBI1LlDa7MDdUBNVwIg-SktusiMB8kix/view?usp=sharing" target="_blank" class="collection-item drop-down" style = "text-align:left">Hostel Constitution</a>
+              <a href="https://drive.google.com/file/d/1lK0xM5z-TvJhbEK9exjc-Qb--XUnSjPD/view?usp=sharing" target="_blank" class="collection-item" style = "text-align:left">Students' Gymkhana Constitution</a>
+              <a href="https://drive.google.com/file/d/1mL03zdBFMtQwzES4tRRhdXG1lZVI_UFi/view?usp=sharing" target="_blank" class="collection-item" style = "text-align:left">Hostel Maintainance Policy</a>
+              <a href="https://drive.google.com/file/d/11v7vp54PRmDYR708BYvJcagKk_QzIRNH/view?usp=sharing" target="_blank" class="collection-item" style = "text-align:left">Mess Guidelines</a>
+              <a href="https://drive.google.com/file/d/1Ke_jv7gK1GWj7tDdvdtEFfPXzNyh2r0i/view?usp=sharing" target="_blank" class="collection-item" style = "text-align:left">Duties of HEC members</a>
+              <a href="#!" target="_blank" class="collection-item" style = "text-align:left">Canteen</a>
+              <a href="https://drive.google.com/file/d/1kP4wlHLg2cthGeteKpBu-d0Wlgwhuxnd/view?usp=sharing" target="_blank" class="collection-item" style = "text-align:left">Committee Conveners of Parliament</a>
+              <a href="#!" target="_blank" class="collection-item" style = "text-align:left">Laundry Service</a>
               </div>
             </div>
 
